--- a/mode1.html
+++ b/mode1.html
@@ -14,20 +14,22 @@
     
     <div class="container">
         
-        <h1 id="welcome">Welcome to The Dicee Game!</h1>
+        <h1>Refresh me!</h1>
 
         <div>
-            <h3>Choose the mode</h3>
+            <button class="btn gos">START!</button>
+        </div>
+
+        <div class="dice">
+            <img class="imag" src="images/dice6.png" alt="Dado cambiando aleatoriamente del 1 al 6">
         </div>
 
         <div>
-            <button class="btn index"><a href="mode1.html">SOLITARY</a></button>
-        </div>
-
-        <div>
-            <button class="btn index"><a href="mode2.html">COMPETE</a></button>
+            <button class="btn volver"><a href="index.html">⮐</a></button>
         </div>
     </div>
+
+<script src="modeSolo.js"></script>
 </body>
 
 <footer>
